JumpScript/tests/baselines/reference/arithmeticOperatorWithNullValueAndValidOperands.errors.txt
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(13,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(14,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(15,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(16,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(17,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(18,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(19,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(20,17): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(23,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(24,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(25,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(26,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(27,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(28,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(29,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(30,17): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(33,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(34,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(35,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(36,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(37,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(38,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(39,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(40,17): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(43,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(44,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(45,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(46,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(47,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(48,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(49,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(50,17): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(53,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(54,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(55,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(56,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(57,16): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(58,16): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(59,16): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(60,18): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(63,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(64,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(65,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(66,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(67,16): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(68,16): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(69,16): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(70,18): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(73,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(74,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(75,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(76,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(77,17): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(78,17): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(79,17): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(80,19): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(83,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(84,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(85,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(86,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(87,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(88,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(89,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(90,17): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(93,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(94,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(95,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(96,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(97,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(98,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(99,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(100,17): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(103,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(104,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(105,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(106,11): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(107,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(108,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(109,15): error TS2531: Object is possibly 'null'.
tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump(110,17): error TS2531: Object is possibly 'null'.


==== tests/cases/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.jump (80 errors) ====
    // If one operand is the null or undefined value, it is treated as having the type of the
    // other operand.
    
    enum E {
        a,
        b
    }
    
    var a: any;
    var b: number;
    
    // operator *
    var ra1 = null * a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ra2 = null * b;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ra3 = null * 1;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ra4 = null * E.a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ra5 = a * null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ra6 = b * null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ra7 = 0 * null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ra8 = E.b * null;
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    
    // operator /
    var rb1 = null / a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rb2 = null / b;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rb3 = null / 1;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rb4 = null / E.a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rb5 = a / null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rb6 = b / null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rb7 = 0 / null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rb8 = E.b / null;
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    
    // operator %
    var rc1 = null % a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rc2 = null % b;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rc3 = null % 1;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rc4 = null % E.a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rc5 = a % null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rc6 = b % null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rc7 = 0 % null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rc8 = E.b % null;
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    
    // operator -
    var rd1 = null - a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rd2 = null - b;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rd3 = null - 1;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rd4 = null - E.a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rd5 = a - null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rd6 = b - null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rd7 = 0 - null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rd8 = E.b - null;
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    
    // operator <<
    var re1 = null << a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var re2 = null << b;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var re3 = null << 1;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var re4 = null << E.a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var re5 = a << null;
                   ~~~~
!!! error TS2531: Object is possibly 'null'.
    var re6 = b << null;
                   ~~~~
!!! error TS2531: Object is possibly 'null'.
    var re7 = 0 << null;
                   ~~~~
!!! error TS2531: Object is possibly 'null'.
    var re8 = E.b << null;
                     ~~~~
!!! error TS2531: Object is possibly 'null'.
    
    // operator >>
    var rf1 = null >> a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rf2 = null >> b;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rf3 = null >> 1;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rf4 = null >> E.a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rf5 = a >> null;
                   ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rf6 = b >> null;
                   ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rf7 = 0 >> null;
                   ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rf8 = E.b >> null;
                     ~~~~
!!! error TS2531: Object is possibly 'null'.
    
    // operator >>>
    var rg1 = null >>> a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rg2 = null >>> b;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rg3 = null >>> 1;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rg4 = null >>> E.a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rg5 = a >>> null;
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rg6 = b >>> null;
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rg7 = 0 >>> null;
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rg8 = E.b >>> null;
                      ~~~~
!!! error TS2531: Object is possibly 'null'.
    
    // operator &
    var rh1 = null & a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rh2 = null & b;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rh3 = null & 1;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rh4 = null & E.a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rh5 = a & null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rh6 = b & null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rh7 = 0 & null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rh8 = E.b & null;
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    
    // operator ^
    var ri1 = null ^ a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ri2 = null ^ b;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ri3 = null ^ 1;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ri4 = null ^ E.a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ri5 = a ^ null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ri6 = b ^ null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ri7 = 0 ^ null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var ri8 = E.b ^ null;
                    ~~~~
!!! error TS2531: Object is possibly 'null'.
    
    // operator |
    var rj1 = null | a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rj2 = null | b;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rj3 = null | 1;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rj4 = null | E.a;
              ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rj5 = a | null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rj6 = b | null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rj7 = 0 | null;
                  ~~~~
!!! error TS2531: Object is possibly 'null'.
    var rj8 = E.b | null;
                    ~~~~
!!! error TS2531: Object is possibly 'null'.